# data-slice-exercise

./: main.py  pyproject.toml
eda/: slicing.ipynb
