[tool.poetry]
name = "udacity-slice-exercise"
version = "0.1.0"
description = ""
authors = ["Nikolas Hunt <nikolas.hunt@dyson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.3"
pytest = "^7.2.0"
jupyter = "^1.0.0"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
